current progress, still having trouble with configs

--- a/LdapBundle/Resources/config/services.yml
+++ b/LdapBundle/Resources/config/services.yml
@@ -1,6 +1,11 @@
 parameters:
-    daps_ldap.user_provider.class: Daps\LdapBundle\LdapUserProvider
+    daps_ldap.user_provider.class: Daps\LdapBundle\Security\Ldap\User\LdapUserProvider
+    daps_ldap.authentication_provider.class: Daps\LdapBundle\Security\Authentication\Provider\LdapAuthenticationProvider
     
 services:
     daps_ldap_user_provider:
         class: %daps_ldap.user_provider.class%
+
+    daps_ldap.security.authentication.provider:
+        class: %daps_ldap.authentication_provider.class%
+        arguments: ['', Symfony\Component\Security\Core\User\UserChecker , '', ]
