--- a/LdapBundle/Resources/config/services.yml
+++ b/LdapBundle/Resources/config/services.yml
@@ -1,4 +1,10 @@
 parameters:
+    # ldap params -- @TODO MOVE THESE SOMEPLACE BETTER
+    daps_ldap.ldap.host: example.com
+    daps_ldap.ldap.port: 389
+    daps_ldap.ldap.dn: dc=example,dc=com
+    daps_ldap.ldap.username_suffix: ou=people
+    # class parameters
     daps_ldap.user_provider.class: Daps\LdapBundle\Security\User\LdapUserProvider
     daps_ldap.authentication_provider.class: Daps\LdapBundle\Security\Authentication\Provider\LdapAuthenticationProvider
     security.user_checker.class: Symfony\Component\Security\Core\User\UserChecker
@@ -18,3 +24,4 @@ services:
         
     daps_ldap.ldap:
         class: %daps_ldap.ldap.class%
+        arguments: [%daps_ldap.ldap.host%, %daps_ldap.ldap.port%, %daps_ldap.ldap.dn%, %daps_ldap.ldap.username_suffix%]
