--- a/LdapBundle/Resources/config/services.yml
+++ b/LdapBundle/Resources/config/services.yml
@@ -2,8 +2,8 @@ parameters:
     # ldap params -- @TODO MOVE THESE SOMEPLACE BETTER
     daps_ldap.ldap.host: example.com
     daps_ldap.ldap.port: 389
-    daps_ldap.ldap.dn: dc=example,dc=com
-    daps_ldap.ldap.username_suffix: ou=people
+    daps_ldap.ldap.dn: uid
+    daps_ldap.ldap.username_suffix: ou=people,dc=example,dc=com
     # class parameters
     daps_ldap.user_provider.class: Daps\LdapBundle\Security\User\LdapUserProvider
     daps_ldap.authentication_provider.class: Daps\LdapBundle\Security\Authentication\Provider\LdapAuthenticationProvider
