--- a/LdapBundle/Resources/config/services.yml
+++ b/LdapBundle/Resources/config/services.yml
@@ -1,6 +1,6 @@
 parameters:
     # ldap params -- @TODO MOVE THESE SOMEPLACE BETTER
-    daps_ldap.ldap.host: example.com
+    daps_ldap.ldap.host: ldaps://example.com
     daps_ldap.ldap.port: 389
     daps_ldap.ldap.dn: uid
     daps_ldap.ldap.username_suffix: ou=people,dc=example,dc=com
