--- a/LdapBundle/Resources/config/services.yml
+++ b/LdapBundle/Resources/config/services.yml
@@ -1,9 +1,10 @@
 parameters:
     # ldap params -- @TODO MOVE THESE SOMEPLACE BETTER
-    daps_ldap.ldap.host: ldaps://example.com
+    daps_ldap.ldap.host: ldap://example.com
     daps_ldap.ldap.port: 389
     daps_ldap.ldap.dn: uid
     daps_ldap.ldap.username_suffix: ou=people,dc=example,dc=com
+    daps_ldap.ldap.inactive_key_value: shadowflag=0
     # class parameters
     daps_ldap.user_provider.class: Daps\LdapBundle\Security\User\LdapUserProvider
     daps_ldap.authentication_provider.class: Daps\LdapBundle\Security\Authentication\Provider\LdapAuthenticationProvider
@@ -24,4 +25,4 @@ services:
         
     daps_ldap.ldap:
         class: %daps_ldap.ldap.class%
-        arguments: [%daps_ldap.ldap.host%, %daps_ldap.ldap.port%, %daps_ldap.ldap.dn%, %daps_ldap.ldap.username_suffix%]
+        arguments: [%daps_ldap.ldap.host%, %daps_ldap.ldap.port%, %daps_ldap.ldap.dn%, %daps_ldap.ldap.username_suffix%, %daps_ldap.ldap.inactive_key_value%]
