--- a/LdapBundle/Resources/config/services.yml
+++ b/LdapBundle/Resources/config/services.yml
@@ -3,7 +3,7 @@ parameters:
     daps_ldap.ldap.host: ldap://example.com
     daps_ldap.ldap.port: 389
     daps_ldap.ldap.dn: uid
-    daps_ldap.ldap.username_suffix: ou=people,dc=example,dc=com
+    daps_ldap.ldap.username_suffix: dc=example,dc=com
     # userprovider param
     daps_ldap_user_provider.inactive_key_value: shadowflag=1
     # class parameters
