--- a/LdapBundle/Resources/config/ldapcredentials.example.yml
+++ b/LdapBundle/Resources/config/ldapcredentials.example.yml
@@ -2,7 +2,7 @@ parameters:
     daps_ldap.ldap.admin.dn: cn=admin,dc=example,dc=com
     daps_ldap.ldap.admin.password: root
     daps_ldap.ldap.admin.enable: true
-    daps_ldap.ldap.admin.host: ldap://example.com
-    daps_ldap.ldap.admin.port: 389
-    daps_ldap.ldap.admin.dn: uid
-    daps_ldap.ldap.admin.username_suffic: dcexample,dc=com
+    daps_ldap.ldap.host: ldap://example.com
+    daps_ldap.ldap.port: 389
+    daps_ldap.ldap.dn: uid
+    daps_ldap.ldap.username_suffix: dc=example,dc=com
